feat: init project with two app created and a readme

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,19 @@
 {
-  "recommendations": ["nrwl.angular-console", "esbenp.prettier-vscode"]
+  "recommendations": [
+    "nrwl.angular-console",
+    "esbenp.prettier-vscode",
+    "rust-lang.rust-analyzer",
+    "github.copilot",
+    "mitchdenny.ecdc",
+    "aaron-bond.better-comments",
+    "bierner.markdown-mermaid",
+    "hristian-kohler.path-intellisense",
+    "helixquar.randomeverything",
+    "shardulm94.trailing-spaces",
+    "tamasfe.even-better-toml",
+    "edwinkofler.vscode-hyperupcall-pack-markdown",
+    "proxzima.sweetdracula",
+    "wdhongtw.gpg-indicator",
+    "vadimcn.vscode-lldb"
+  ]
 }
