--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@monodon/rust": "^2.0.0-beta.1",
     "@nx/cypress": "19.4.3",
     "@nx/eslint": "19.4.3",
     "@nx/eslint-plugin": "19.4.3",
@@ -41,5 +42,6 @@
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
