--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,7 @@
     "edwinkofler.vscode-hyperupcall-pack-markdown",
     "proxzima.sweetdracula",
     "wdhongtw.gpg-indicator",
-    "vadimcn.vscode-lldb"
+    "vadimcn.vscode-lldb",
+    "firsttris.vscode-jest-runner"
   ]
 }
