--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@nx/devkit": "19.4.3",
+    "tslib": "^2.3.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
@@ -12,14 +14,18 @@
     "@nx/cypress": "19.4.3",
     "@nx/eslint": "19.4.3",
     "@nx/eslint-plugin": "19.4.3",
+    "@nx/jest": "19.4.3",
     "@nx/js": "19.4.3",
+    "@nx/plugin": "19.4.3",
     "@nx/vite": "19.4.3",
     "@nx/vue": "19.4.3",
     "@nx/web": "19.4.3",
     "@nx/workspace": "19.4.3",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
@@ -34,10 +40,14 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-vue": "^9.16.1",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "19.4.3",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
