--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -8,6 +8,7 @@ default-run = "server"
 [dependencies]
 markdown-parser = "0.1.2"
 serde = "1.0.204"
+serde_json = "1.0.120"
 serde_yaml = "0.9.34"
 
 # Code that handle the CLI
