feat: test content struct and init blog timeline

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@portfolio/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "rust:test":"cargo llvm-cov --open"
+  },
   "private": true,
   "dependencies": {
     "tslib": "^2.3.0",
@@ -51,7 +53,7 @@
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
-    "vue-tsc": "^2.0.0"
+    "vue-tsc": "^2.0.29"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
