--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -10,6 +10,7 @@ markdown-parser = "0.1.2"
 serde = "1.0.204"
 serde_json = "1.0.120"
 serde_yaml = "0.9.34"
+url = "2.5.2"
 
 # Code that handle the CLI
 [[bin]]
