--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -6,6 +6,8 @@ default-run = "server"
 
 
 [dependencies]
+chrono = { version = "0.4.38", features = ["serde"] }
+chrono-tz = { version = "0.9.0", features = ["serde"] }
 markdown-parser = "0.1.2"
 serde = "1.0.204"
 serde_json = "1.0.120"
