--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -8,7 +8,7 @@ default-run = "server"
 [dependencies]
 chrono = { version = "0.4.38", features = ["serde"] }
 chrono-tz = { version = "0.9.0", features = ["serde"] }
-markdown-parser = "0.1.2"
+markdown_header = { path = "../../libs/markdown_header" }
 serde = "1.0.204"
 serde_json = "1.0.120"
 serde_yaml = "0.9.34"
