--- a/.github/workflows/rust-coverage.yml
+++ b/.github/workflows/rust-coverage.yml
@@ -34,7 +34,8 @@ jobs:
       run: |
         cargo llvm-cov --lcov --output-path lcov.info nextest
 
-    - name: Upload coverage data to codecov
-      uses: codecov/codecov-action@v3
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: lcov.info
