--- a/.github/workflows/rust-coverage.yml
+++ b/.github/workflows/rust-coverage.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Collect coverage data (including doctests)
       run: |
-        cargo llvm-cov --lcov --output-path lcov.info
+        cargo llvm-cov --lcov --output-path lcov.info --ignore-filename-regex 'init'
 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
