--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 
 [workspace]
 resolver = '2'
-members = [
-	'apps/back',
-	'libs/markdown_header',
-]
+members = ['apps/back', 'libs/markdown_header', 'libs/tool_tracing']
 
 [profile.release]
 lto = true
+
+[patch.crates-io]
+tokio-macros = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
