--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -6,13 +6,14 @@ default-run = "server"
 
 
 [dependencies]
-chrono = { version = "0.4.38", features = ["serde"] }
-chrono-tz = { version = "0.9.0", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] }
 markdown_header = { path = "../../libs/markdown_header" }
-serde = "1.0.204"
-serde_json = "1.0.120"
-serde_yaml = "0.9.34"
-url = "2.5.2"
+markdown_struct = { path = "../../libs/markdown_struct" }
+tool_tracing = { path = "../../libs/tool_tracing" }
+serde = "1.0"
+serde_json = "1.0"
+serde_yaml = "0.9"
+tokio = "1.39"
 
 # Code that handle the CLI
 [[bin]]
