--- a/libs/markdown_struct/Cargo.toml
+++ b/libs/markdown_struct/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
-name = "markdown_header"
+name = "markdown_struct"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-enum-iterator = "2.1"
-getset = "0.1"
-quick-error = "2.0"
-regex = "1.10"
-serde = { version = "1", features = ["derive"] }
+serde = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-toml = "0.8"
+markdown_header = { path = "../markdown_header" }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
