--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -14,6 +14,8 @@ serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.9"
 tokio = "1.39"
+dotenvy = "0.15.7"
+tracing = "0.1.40"
 
 # Code that handle the CLI
 [[bin]]
