--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -13,9 +13,18 @@ tool_tracing = { path = "../../libs/tool_tracing" }
 serde = "1.0"
 serde_json = "1.0"
 serde_yaml = "0.9"
-tokio = "1.39"
-dotenvy = "0.15.7"
-tracing = "0.1.40"
+dotenvy = "0.15"
+tracing = "0.1"
+
+# Api Dependencies
+
+tokio = { version = "1.39", features = ["rt-multi-thread"] }
+actix-web = "4"
+utoipa = { version = "4", features = ["actix_extras", "chrono"] }
+utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
+actix-cors = "0.7.0"
+tracing-actix-web = "0.7.11"
+
 
 # Code that handle the CLI
 [[bin]]
