--- a/libs/tool_tracing/Cargo.toml
+++ b/libs/tool_tracing/Cargo.toml
@@ -20,6 +20,8 @@ opentelemetry-otlp = { version = "0.16" }
 tracing-opentelemetry = "0.24"
 serde_json = "1.0"
 tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
+pyroscope = "0.5.7"
+pyroscope_pprofrs = "0.2.7"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
