--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "rust:test":"cargo llvm-cov --open --ignore-filename-regex 'init'"
+    "rust:test":"cargo llvm-cov --open --ignore-filename-regex 'init'",
+    "rust:start": "podman compose up -d && cargo run"
   },
   "private": true,
   "dependencies": {
