feat: create a js lib including the api call

--- a/apps/back/Cargo.toml
+++ b/apps/back/Cargo.toml
@@ -38,3 +38,9 @@ test = true
 name = "sandbox"
 path = "src/bin/sandbox.rs"
 test = false
+
+# Code that generate the swagger.json
+[[bin]]
+name = "swagger"
+path = "src/bin/gen_swagger.rs"
+test = false
