--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@portfolio/source",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "rust:test": "cargo llvm-cov --open --ignore-filename-regex 'init'",
     "rust:start": "podman compose up -d && cargo run",
