--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "private": true,
   "dependencies": {
     "@hey-api/client-axios": "^0.2.2",
+    "@primevue/themes": "^4.0.4",
+    "pinia": "^2.2.1",
+    "primevue": "^4.0.4",
     "tslib": "^2.3.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@monodon/rust": "^2.0.0-beta.1",
@@ -28,6 +32,7 @@
     "@nx/vue": "19.4.3",
     "@nx/web": "19.4.3",
     "@nx/workspace": "19.4.3",
+    "@primevue/auto-import-resolver": "^4.0.4",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
@@ -56,6 +61,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
     "vue-tsc": "^2.0.29"
