--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
@@ -56,8 +57,11 @@
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
     "nx": "19.4.3",
+    "postcss": "^8.4.41",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "tailwindcss": "^3.4.9",
+    "tailwindcss-primeui": "^0.3.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
