--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
   },
   "devDependencies": {
     "@monodon/rust": "^2.0.0-beta.1",
-    "@nx/cypress": "19.4.3",
-    "@nx/devkit": "19.4.3",
-    "@nx/eslint": "19.4.3",
-    "@nx/eslint-plugin": "19.4.3",
-    "@nx/jest": "19.4.3",
-    "@nx/js": "19.4.3",
-    "@nx/plugin": "19.4.3",
-    "@nx/vite": "19.4.3",
-    "@nx/vue": "19.4.3",
-    "@nx/web": "19.4.3",
-    "@nx/workspace": "19.4.3",
+    "@nx/cypress": "19.5.7",
+    "@nx/devkit": "19.5.7",
+    "@nx/eslint": "19.5.7",
+    "@nx/eslint-plugin": "19.5.7",
+    "@nx/jest": "19.5.7",
+    "@nx/js": "19.5.7",
+    "@nx/plugin": "19.5.7",
+    "@nx/vite": "19.5.7",
+    "@nx/vue": "19.5.7",
+    "@nx/web": "19.5.7",
+    "@nx/workspace": "19.5.7",
     "@primevue/auto-import-resolver": "^4.0.4",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
@@ -39,8 +39,8 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^7.3.0",
-    "@typescript-eslint/parser": "^7.3.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
@@ -56,7 +56,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jsdom": "~22.1.0",
-    "nx": "19.4.3",
+    "nx": "19.5.7",
     "postcss": "^8.4.41",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
@@ -64,7 +64,7 @@
     "tailwindcss-primeui": "^0.3.4",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.4.2",
+    "typescript": "5.5.4",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
