feat: Setup podman conteneur

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "rust:test": "cargo llvm-cov --open --ignore-filename-regex 'init'",
-    "rust:start": "podman compose up -d && cargo run",
+    "rust:start": "podman compose up -d && nx run back:run",
     "rust:generate": "cargo run --bin swagger -- ./swagger.json",
     "vue:gen_api": "npx @hey-api/openapi-ts -i ./swagger.json -o libs/api-client/src/api -c @hey-api/client-axios"
   },
