--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -11,12 +11,12 @@ name: rust-clippy analyze
 
 on:
   push:
-    branches: ["main", "*"]
+    branches: ['main', '*']
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: ["main"]
+    branches: ['main']
   schedule:
-  - cron: '50 23 * * *'
+    - cron: '50 23 * * *'
 
 jobs:
   rust-clippy-analyze:
@@ -27,24 +27,24 @@ jobs:
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Rust toolchain
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        toolchain: stable
-        components: clippy, rustfmt
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          components: clippy, rustfmt
 
-    - name: Install required cargo
-      run: cargo install clippy-sarif sarif-fmt cargo-audit
+      - name: Install required cargo
+        run: cargo install clippy-sarif sarif-fmt cargo-audit
 
-    - name: Run rust-clippy
-      run: cargo clippy --all-features --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
-      continue-on-error: true
+      - name: Run rust-clippy
+        run: cargo clippy --all-features --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        continue-on-error: true
 
-    - name: Upload analysis results to GitHub
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: rust-clippy-results.sarif
-        wait-for-processing: true
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: rust-clippy-results.sarif
+          wait-for-processing: true
