--- a/.github/workflows/rust-coverage.yml
+++ b/.github/workflows/rust-coverage.yml
@@ -2,12 +2,12 @@ name: rust-coverage
 
 on:
   push:
-    branches: ["main", "*"]
+    branches: ['main', '*']
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: ["main"]
+    branches: ['main']
   schedule:
-  - cron: '50 23 * * *'
+    - cron: '50 23 * * *'
 
 jobs:
   rust-coverage:
@@ -18,23 +18,23 @@ jobs:
       security-events: write
       actions: read
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Install Rust toolchain
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        toolchain: stable
-        components: llvm-tools-preview
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          components: llvm-tools-preview
 
-    - uses: taiki-e/install-action@cargo-llvm-cov
+      - uses: taiki-e/install-action@cargo-llvm-cov
 
-    - name: Collect coverage data (including doctests)
-      run: |
-        cargo llvm-cov --lcov --output-path lcov.info --ignore-filename-regex 'init'
+      - name: Collect coverage data (including doctests)
+        run: |
+          cargo llvm-cov --lcov --output-path lcov.info --ignore-filename-regex 'init'
 
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v4.0.1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        files: lcov.info
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: lcov.info
