feat: setup who am i and download CV

--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -14,7 +14,7 @@ coverTitle:
 - Architecture.
 - Too much coffee.
 - And lot's more.
-cvUrl: /media/cv.pdf
+cvUrl: cv.pdf
 url:
 - name: GitHub
   url: https://github.com/batleforc
