--- a/package.json
+++ b/package.json
@@ -21,23 +21,23 @@
   },
   "devDependencies": {
     "@monodon/rust": "^2.0.0-beta.1",
-    "@nx/cypress": "19.5.7",
-    "@nx/devkit": "19.5.7",
-    "@nx/eslint": "19.5.7",
-    "@nx/eslint-plugin": "19.5.7",
-    "@nx/jest": "19.5.7",
-    "@nx/js": "19.5.7",
-    "@nx/plugin": "19.5.7",
-    "@nx/vite": "19.5.7",
-    "@nx/vue": "19.5.7",
-    "@nx/web": "19.5.7",
-    "@nx/workspace": "19.5.7",
+    "@nx/cypress": "19.6.2",
+    "@nx/devkit": "19.6.2",
+    "@nx/eslint": "19.6.2",
+    "@nx/eslint-plugin": "19.6.2",
+    "@nx/jest": "19.6.2",
+    "@nx/js": "19.6.2",
+    "@nx/plugin": "19.6.2",
+    "@nx/vite": "19.6.2",
+    "@nx/vue": "19.6.2",
+    "@nx/web": "19.6.2",
+    "@nx/workspace": "19.6.2",
     "@primevue/auto-import-resolver": "^4.0.4",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "7.18.0",
     "@typescript-eslint/parser": "7.18.0",
@@ -53,10 +53,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-vue": "^9.16.1",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jsdom": "~24.1.1",
-    "nx": "19.5.7",
+    "nx": "19.6.2",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "sass": "1.62.1",
