--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -1,6 +1,7 @@
 name: Maxime Leriche
 presentation: |
-  Hello, Moi c'est Maxime, je suis un développeur passionné autant par les nouvelles technologies qu'un nouveau projet.
+  Hello,
+  Moi c'est Maxime, je suis un développeur passionné autant par les nouvelles technologies qu'un nouveau projet.
   J'aime apprendre en permanence et construire ce que j'estime étre ma base de connaissance.
   Et vous êtes ici sur mon site qui est un savant mélange de mes passions et de mes projets.
   Alors, bienvenue et bonne visite !
@@ -47,10 +48,18 @@ history:
   description: |
     DUT Informatique
     Découverte de la programmation et des bases nécessaires pour devenir développeur (Java, C, SQL, C#, JS, Python, PHP, etc)
+- title: Stage Dev Web
+  lieux: Maxinfoweb, Neuilly en Thelle
+  date: Mars 2020 - Juin 2020
+  weight: 3
+  imgUrl: logoMaxinfoweb.png
+  description: |
+    Stage de fin d'étude BAC+2
+    Développements d'applications en PHP sur un Framework propre a l'entreprise.
 - title: Codeur
   lieux: Museomix, Amiens
   date: 2019
-  weight: 3
+  weight: 4
   imgUrl: museomixLogo.png
   url:
   - name: Objectif CIAP
@@ -64,7 +73,7 @@ history:
 - title: LP Dev Cloud
   lieux: IUT La Rochelle, Niort
   date: 2020 - 2021
-  weight: 4
+  weight: 5
   imgUrl: logoIUTLaRochelle.png
   description: |
     Licence Professionnelle Développement Cloud et Mobile
@@ -73,7 +82,7 @@ history:
 - title: Alternant dev natif et PWA
   lieux: Nexi Conseils, Aigrefeuille d'Aunis
   date: 2020 - 2021
-  weight: 5
+  weight: 6
   imgUrl: nexiConseils.png
   description: |
     Alternance en tant que développeur natif et PWA
@@ -82,7 +91,7 @@ history:
 - title: Master Architecte Logiciel
   lieux: Université de La Rochelle, Niort
   date: 2021 - 2023
-  weight: 6
+  weight: 7
   imgUrl: logoUniversiteLaRochelle.png
   description: |
     Master Architecte Logiciel
@@ -91,7 +100,7 @@ history:
 - title: Alternant DevOps/Couche d'échange
   lieux: Macif, Niort
   date: 2021 - 2023
-  weight: 7
+  weight: 8
   imgUrl: macif.png
   description: |
     Alternance en tant que DevOps et développeur couche d'échange
@@ -101,7 +110,7 @@ history:
 - title: CDI Ingénieur Couche d'échange / Socle de fabrication
   lieux: Macif, Niort
   date: 2023 - Now
-  weight: 8
+  weight: 9
   imgUrl: macif.png
   description: |
     A la suite de mon alternance, la Macif et plus précisément mon manager m'a fait confiance en me proposant de continuer l'aventure avec eux.
