--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -2,7 +2,7 @@ name: Maxime Leriche
 presentation: |
   Hello,
   Moi c'est Maxime, je suis un développeur passionné autant par les nouvelles technologies qu'un nouveau projet.
-  J'aime apprendre en permanence et construire ce que j'estime étre ma base de connaissance.
+  J'aime apprendre en permanence et construire ce que j'estime être ma base de connaissance.
   Et vous êtes ici sur mon site qui est un savant mélange de mes passions et de mes projets.
   Alors, bienvenue et bonne visite !
 coverTitle:
@@ -36,10 +36,10 @@ history:
   weight: 1
   imgUrl: logoLyceeMarieCurie.png
   description: |
-    Bac STI2D option ITEC (Innovation Technologique et Eco-Conception)
+    Bac STI2D o(InnovITEC (Innovation TechnologiqueEco-Co)
     Obtenu avec mention Bien
-    Découverte de la la conception de piéce en 3D et de l'annalyse des contraintes mécaniques
-    Base importante pour ma passion pour l'impression 3D et la conception de piéce
+    Découverte de la conception de pièces en 3D et de l'analyse des contraintes mécaniques
+    Base importante pour ma passion pour l'impression 3D et la conception de pièces
 - title: DUT INFO
   lieux: IUT Amiens, Amiens
   date: 2018 - 2020
@@ -55,7 +55,7 @@ history:
   imgUrl: logoMaxinfoweb.png
   description: |
     Stage de fin d'étude BAC+2
-    Développements d'applications en PHP sur un Framework propre a l'entreprise.
+    Développements d'applications en PHP sur un Framework propre à l'entreprise.
 - title: Codeur
   lieux: Museomix, Amiens
   date: 2019
@@ -69,7 +69,7 @@ history:
   description: |
     Museomix est un événement qui a pour but de réinventer l'interaction entre les visiteurs et les musées.
     J'ai participé à l'édition 2019 à Amiens et j'ai pu travailler en tant que codeur sur le projet Mix Ta Brique.
-    Ce fut une expérience enrichissante qui m'a permis de découvrir le travail dans une équipe d'horizons différents et de travailler sur un projet concret.
+    Ce fut une expérience enrichissante qui m'a permis de découvrir le travail dans une équipe aux horizons différents et de travailler sur un projet concret.
 - title: LP Dev Cloud
   lieux: IUT La Rochelle, Niort
   date: 2020 - 2021
@@ -95,7 +95,7 @@ history:
   imgUrl: logoUniversiteLaRochelle.png
   description: |
     Master Architecte Logiciel
-    Découverte de l'architectures logicielles et des bonnes pratiques de développement ainsi que des concepte de recherche universitaire
+    Découverte de l'architecture logicielle et des bonnes pratiques de développement ainsi que des concepts de recherche universitaire.
     Approfondissement des connaissances en développement, en recherche et en administration système
 - title: Alternant DevOps/Couche d'échange
   lieux: Macif, Niort
@@ -105,14 +105,14 @@ history:
   description: |
     Alternance en tant que DevOps et développeur couche d'échange
     Mise en situation réelle des concepts appris en cours et découverte de concepts plus avancés
-    Découverte de développement incluant des couche d'asyncronisme et de la gestion de flux de données via Kafka
-    Application des concepts de DevOps et de CI/CD appris sur des projets personnels dans des cas réel
+    Découverte de développement incluant des couches d'asynchronisme et de la gestion de flux de données via Kafka.
+    Application des concepts de DevOps et de CI/CD appris sur des projets personnels dans des cas réels
 - title: CDI Ingénieur Couche d'échange / Socle de fabrication
   lieux: Macif, Niort
   date: 2023 - Now
   weight: 9
   imgUrl: macif.png
   description: |
-    A la suite de mon alternance, la Macif et plus précisément mon manager m'a fait confiance en me proposant de continuer l'aventure avec eux.
-    J'ai donc accepté et je suis maintenant Ingénieur participant a l'évolution de la couche d'échange (principalement) et du socle de fabrication.
-    Mes taches sont variées et voué a être transverses entre la couche d'échange et le socle de fabrication.
+    À la suite de mon alternance, la Macif et plus précisément mon manager m'a fait confiance en me proposant de continuer l'aventure avec eux.
+    J'ai donc accepté et je suis maintenant ingénieur participant à l'évolution de la couche d'échange (principalement) et du socle de fabrication.
+    Mes tâches sont variées et vouées à être transverses entre la couche d'échange et le socle de fabrication.
