--- a/folio_content/content/home.yaml
+++ b/folio_content/content/home.yaml
@@ -36,7 +36,7 @@ history:
   weight: 1
   imgUrl: logoLyceeMarieCurie.png
   description: |
-    Bac STI2D o(InnovITEC (Innovation TechnologiqueEco-Co)
+    Bac STI2D ITEC
     Obtenu avec mention Bien
     Découverte de la conception de pièces en 3D et de l'analyse des contraintes mécaniques
     Base importante pour ma passion pour l'impression 3D et la conception de pièces
