--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@
 resolver = '2'
 members = [
 	'apps/back',
-	'libs/markdown_header',
-	'libs/tool_tracing',
-	'libs/markdown_struct',
+	'libs/back/markdown_header',
+	'libs/back/tool_tracing',
+	'libs/back/markdown_struct',
 ]
 
 [profile.release]
