fix: add file to the watched list

--- a/cicd/values.yaml
+++ b/cicd/values.yaml
@@ -20,6 +20,8 @@ build:
     - "libs/back/"
     - "folio_content/"
     - "Cargo.toml"
+    - "build/back/"
+    - "deploy/back/"
     file_path: "build/back/Containerfile"
     helm: "deploy/back"
     imageName: "back"
@@ -29,6 +31,8 @@ build:
     - "libs/front/"
     - "package.json"
     - "yarn.lock"
+    - "build/front/"
+    - "deploy/front/"
     file_path: "build/front/Containerfile"
     helm: "deploy/front"
     imageName: "front"
