fix: name of task

--- a/cicd/templates/push/pipelinePush.yaml
+++ b/cicd/templates/push/pipelinePush.yaml
@@ -84,7 +84,7 @@ spec:
     - name: build-docker
       runAfter: ["fetch-source"]
       taskRef:
-        name: build
+        name: build-image
       workspaces:
         - name: shared-data
           workspace: shared-data
