fix: name of task

--- a/cicd/templates/push/pipelinePush.yaml
+++ b/cicd/templates/push/pipelinePush.yaml
@@ -104,7 +104,7 @@ spec:
     - name: helm-upgrade
       runAfter: ["build-docker"]
       taskRef:
-        name: helm-upgrade-from-source
+        name: helm-upgrade
       workspaces:
         - name: source
           workspace: shared-data
