fix: task param

--- a/cicd/templates/push/pipelinePush.yaml
+++ b/cicd/templates/push/pipelinePush.yaml
@@ -99,6 +99,8 @@ spec:
       params:
         - name: path-dockerfile
           value: $(params.conteneurfile-path)
+        - name: DOCKERFILE
+          value: Conteneurfile
         - name: context-dockerfile
           value: .
         - name: IMAGE
