--- a/cicd/templates/push/triggerTemplatePush.yaml
+++ b/cicd/templates/push/triggerTemplatePush.yaml
@@ -54,4 +54,6 @@ spec:
             value: "{{ $val.helm }}"
           - name: githubSecretName
             value: "{{ $.Values.secrets.githubTokenApi }}"
+          - name: release-name
+            value: "{{ $key }}"
 {{- end}}
