--- a/deploy/back/templates/deployment.yaml
+++ b/deploy/back/templates/deployment.yaml
@@ -39,13 +39,13 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /api/
               port: http
             initialDelaySeconds: 10
             periodSeconds: 10
           readinessProbe:
             httpGet:
-              path: /
+              path: /api/
               port: http
             initialDelaySeconds: 5
             periodSeconds: 10
