--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -18,5 +18,6 @@
       "path": "./tsconfig.spec.json"
     }
   ],
-  "extends": "../../tsconfig.base.json"
+  "extends": "../../tsconfig.base.json",
+  "composite": true
 }
