--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@hey-api/client-axios": "^0.2.2",
+    "@hey-api/client-axios": "^0.2.3",
     "@primevue/themes": "^4.0.4",
     "pinia": "^2.2.1",
     "primevue": "^4.0.4",
@@ -21,19 +21,19 @@
   },
   "devDependencies": {
     "@monodon/rust": "^2.0.0-beta.1",
-    "@nx/cypress": "19.6.2",
-    "@nx/devkit": "19.6.2",
-    "@nx/eslint": "19.6.2",
-    "@nx/eslint-plugin": "19.6.2",
-    "@nx/jest": "19.6.2",
-    "@nx/js": "19.6.2",
-    "@nx/plugin": "19.6.2",
-    "@nx/vite": "19.6.2",
-    "@nx/vue": "19.6.2",
-    "@nx/web": "19.6.2",
-    "@nx/workspace": "19.6.2",
+    "@nx/cypress": "19.6.3",
+    "@nx/devkit": "19.6.3",
+    "@nx/eslint": "19.6.3",
+    "@nx/eslint-plugin": "19.6.3",
+    "@nx/jest": "19.6.3",
+    "@nx/js": "19.6.3",
+    "@nx/plugin": "19.6.3",
+    "@nx/vite": "19.6.3",
+    "@nx/vue": "19.6.3",
+    "@nx/web": "19.6.3",
+    "@nx/workspace": "19.6.3",
     "@primevue/auto-import-resolver": "^4.0.4",
-    "@swc-node/register": "~1.9.1",
+    "@swc-node/register": "^1.10.9",
     "@swc/cli": "~0.4.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -51,19 +51,19 @@
     "cypress": "^13.13.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
+    "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-vue": "^9.16.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jsdom": "~24.1.1",
-    "nx": "19.6.2",
+    "jsdom": "^25.0.0",
+    "nx": "19.6.3",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "sass": "1.62.1",
     "tailwindcss": "^3.4.9",
     "tailwindcss-primeui": "^0.3.4",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "5.5.4",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.0.0",
