--- a/.github/workflows/rust-coverage.yml
+++ b/.github/workflows/rust-coverage.yml
@@ -3,6 +3,9 @@ name: rust-coverage
 on:
   push:
     branches: ['main', '*']
+    paths:
+      - '**/back/**/*.rs'
+      - 'folio_content/**/*'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ['main']
