--- a/.github/workflows/vue-test.yml
+++ b/.github/workflows/vue-test.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-      - run: yarn ci
+      - run: yarn
       - run: npx nx run front:test
