fix: set the otlp url for the helm chart

--- a/deploy/back/values.yaml
+++ b/deploy/back/values.yaml
@@ -29,6 +29,8 @@ ingress:
   host: '{{- template "mychart.name" . }}.dev.mono-folio.com'
 
 
-env: []
+env:
+- name: "OTEL_OTEL_EXPORTER_OTLP_ENDPOINT"
+  value: "http://tempo.monitoring.svc.cluster.local:4317"
 
 envSecrets: []
