--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "private": true,
   "dependencies": {
     "@hey-api/client-axios": "^0.2.3",
+    "@highlightjs/vue-plugin": "^2.1.0",
     "@primevue/themes": "^4.0.4",
+    "highlight.js": "^11.10.0",
     "pinia": "^2.2.1",
     "primevue": "^4.0.4",
     "tslib": "^2.3.0",
