--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "primevue": "^4.0.4",
     "tslib": "^2.3.0",
     "vue": "^3.3.4",
+    "vue-mermaid-string": "^6.0.0",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
