feat: create card has quick description of the page

--- a/apps/front/tsconfig.json
+++ b/apps/front/tsconfig.json
@@ -18,6 +18,5 @@
       "path": "./tsconfig.spec.json"
     }
   ],
-  "extends": "../../tsconfig.base.json",
-  "composite": true
+  "extends": "../../tsconfig.base.json"
 }
