feat: Mise en place de nouvelle doc et ajout d'icon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
   "editor.fontLigatures": true,
   "rust-analyzer.linkedProjects": ["./Cargo.toml"],
   "eslint.validate": ["json"],
-  "css.customData": [".vscode/tailwind.json"]
+  "css.customData": [".vscode/tailwind.json"],
+  "editor.tabSize": 2,
+  "editor.detectIndentation": false
 }
