--- a/.github/workflows/front-lint.yml
+++ b/.github/workflows/front-lint.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install ESLint
         run: |
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+          npm install @microsoft/eslint-formatter-sarif
 
       - name: Run ESLint
         run: npx nx run front:lint --
