--- a/.github/workflows/front-lint.yml
+++ b/.github/workflows/front-lint.yml
@@ -20,9 +20,12 @@ jobs:
       security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      - name: Use Node.js 22
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+          cache: 'yarn'
       - name: Install ESLint
         run: |
           npm install @microsoft/eslint-formatter-sarif
