--- a/libs/front/api-client/tsconfig.lib.json
+++ b/libs/front/api-client/tsconfig.lib.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "outDir": "../../../dist/out-tsc",
     "declaration": true,
-    "types": ["node"]
+    "types": ["node"],
+    "composite": true
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"],
-  "composite": true
+  "exclude": ["src/**/*.spec.ts", "src/**/*.test.ts"]
 }
