feat: ajout perm on rust audit

--- a/.github/workflows/rust-audit.yml
+++ b/.github/workflows/rust-audit.yml
@@ -10,6 +10,8 @@ jobs:
   audit:
     runs-on: ubuntu-latest
     permissions:
+      issues: write
+      checks: write
       contents: read
       security-events: write
       actions: read
