--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -15,6 +15,7 @@ on:
     paths:
       - '**/back/**/*.rs'
       - 'folio_content/**/*'
+      - '**/pong/**/*.rs'
   pull_request:
     # The branches below must be a subset of the branches above
     branches: ['main']
