--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vue:gen_api": "npx @hey-api/openapi-ts -i ./swagger.json -o libs/front/api-client/src/api -c @hey-api/client-axios",
     "vue:test": "vitest run --coverage",
     "rust:api-lint": "spectral lint -f sarif -o ./spectral-report.sarif ./swagger.json",
-    "rust:pong": "cargo run --bin pong --target wasm32-unknown-unknown"
+    "rust:pong": "cargo run --bin pong --target wasm32-unknown-unknown",
+    "rust:pong-build": "cargo build --release --bin pong --target wasm32-unknown-unknown && wasm-bindgen --target web --out-dir ./out/ --out-name 'pong' ./dist/target/wasm32-unknown-unknown/release/pong.wasm "
   },
   "private": true,
   "dependencies": {
